typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode12.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in string mode
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode12.ts:3:19
  |
3 | var v = { set foo(eval) { } }
  |                   ^^^^

